--- a/style.css
+++ b/style.css
@@ -1,1 +1,88 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500;600;700;800&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  font-family: roboto, sans-serif;
+  text-decoration: none;
+  border: none;
+  list-style: none;
+  color: #FFFFFF;
+}
+
+html {
+  scroll-behavior: smooth;
+  background-color: #47BADE;
+}
+
+nav .city {
+  display: flex;
+  justify-content: center;
+}
+nav .city h2 {
+  font-size: 2rem;
+  font-weight: 500;
+  margin-top: 2rem;
+}
+main #general-info .temperature {
+  display: flex;
+  justify-content: center;
+}
+main #general-info .temperature h1 {
+  font-size: 10rem;
+  font-weight: 500;
+  margin-top: 2rem;
+}
+main #general-info .condition {
+  display: flex;
+  justify-content: center;
+}
+main #general-info .condition h3 {
+  font-size: 1.75rem;
+  font-weight: 500;
+}
+main #general-info .aqi {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+main #general-info .aqi .aqi-button {
+  background: rgba(255, 255, 255, 0.17);
+  width: 7rem;
+  height: 2rem;
+  border-radius: 99px;
+}
+main #general-info .aqi .aqi-button img {
+  display: inline-block;
+  vertical-align: middle;
+  width: 25px;
+  transform: rotateY(180deg);
+}
+main #general-info .aqi .aqi-button h3 {
+  display: inline-block;
+  vertical-align: middle;
+}
+main #other-params {
+  margin-top: 5rem;
+  display: flex;
+  display: flex;
+  justify-content: center;
+  -moz-column-gap: 9rem;
+       column-gap: 9rem;
+}
+main #other-params .card {
+  height: 10rem;
+  background: rgba(255, 255, 255, 0.14);
+  border-radius: 32px;
+}
+main #other-params .wind {
+  width: 670px;
+}
+main #other-params .pressure {
+  width: 670px;
+  margin-top: 10px;
+}
+main #other-params .secondary-info {
+  width: 670px;
+  height: calc(20rem + 10px);
+}/*# sourceMappingURL=style.css.map */
