--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 
 html {
   scroll-behavior: smooth;
-  background-color: #47BADE;
 }
 
 nav .city {
@@ -24,6 +23,11 @@ nav .city h2 {
   font-weight: 500;
   margin-top: 2rem;
 }
+nav .icon {
+  float: right;
+  margin: -3rem 2rem auto -200px;
+}
+
 main #general-info .temperature {
   display: flex;
   justify-content: center;
@@ -61,6 +65,20 @@ main #general-info .aqi .aqi-button img {
 main #general-info .aqi .aqi-button h3 {
   display: inline-block;
   vertical-align: middle;
+}
+main #general-info .aqi .modal {
+  position: absolute;
+  padding: 0.5rem;
+  background: rgb(133, 133, 133);
+  z-index: 10;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 30rem;
+  height: 20rem;
+}
+main #general-info .aqi dialog::backdrop {
+  background-color: rgba(67, 67, 67, 0.4666666667);
 }
 main #other-params {
   margin-top: 5rem;
